<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccueilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="647dp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/allerta_stencil"
                android:text="myNanterre"
                android:textAlignment="center"
                android:textColor="#E40E1F"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="88dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/logomynanterre" />

        </LinearLayout>

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@+id/direction"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="1dp"
            android:background="#E40E1F"
            android:ems="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/sandw" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Consulte toutes les cafétariats disponibles dans l'université et aussi leurs affluence ainsi que les produits encore disponibles pour chacune. Tu peux aussi regarder la carte des prix du Crous" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/transpo" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Jette un oeil sur les horaires des prochains trains depuis la gare de Nanterre université, mais aussi l'état du trafic. Tu peux aussi activer les notifications d'alertes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/twitter_accueil" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Reste informé de l'actualité sur l'université de Nanterre en consultant les live tweets" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ballon" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Regarde l'ensemble des activités sportives de l'université avec leurs horaires. Tu peux aussi programmer un séance de sport pour que d'autres étudiants te rejoignent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/map_accueil" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Consulte le plan en 3D du campus avec sa navigation en temps réel pour te guider vers n'importe quel batiment" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="63dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/library_accueil" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:text="Pour te rendre vers n'importe quelle bibliothèque du campus et connaître les horaires, consulte le plan 2D avec sa navigation. L'affluence des espaces de la grande BU est aussi disponible" />

        </LinearLayout>



        <TextView
            android:id="@+id/editText21"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_below="@+id/direction"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#E40E1F"
            android:ems="10" />


        <Button
            android:id="@+id/cgu"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="0dp"
            android:background="#E40E1F"
            android:fontFamily="@font/alice"
            android:text="Licences"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/planBat"
            android:layout_width="67dp"
            android:layout_height="44dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-40dp"
            app:srcCompat="@drawable/map" />

        <Button
            android:id="@+id/Tweet"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-50dp"
            android:background="#E40E1F"
            android:fontFamily="@font/alice"
            android:text="Live Tweets"
            android:textColor="@color/white" />



    </LinearLayout>



</LinearLayout>

