<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!--  <item
        android:id="@+id/navigation_accueil"
        android:icon="@drawable/home"
        android:title="Accueil" /> -->
    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/sport"
        android:title="Sport" />

    <item
        android:id="@+id/navigation_crous"
        android:icon="@drawable/crous"
        android:title="Crous" />

    <item
        android:id="@+id/navigation_biblio"
        android:icon="@drawable/bu"
        android:title="BU" />

    <item
        android:id="@+id/navigation_train"
        android:icon="@drawable/train"
        android:title="Train" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/plan"
        android:title="Plans" />
</menu>